--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "smk-documents-system",
+  "name": "smk-documents-backend",
   "version": "1.0.0",
-  "description": "Система управления документами СМК и СМБПП",
+  "description": "Backend for SMK documents management system",
+  "main": "server.js",
   "scripts": {
-    "install-backend": "cd backend && npm install",
-    "install-frontend": "cd frontend && npm install",
-    "install-all": "npm run install-backend && npm run install-frontend",
-    "start": "cd backend && npm start",
-    "dev": "cd backend && npm run dev"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "keywords": ["smk", "documents", "management"],
-  "author": "Your Name",
-  "license": "MIT"
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "body-parser": "^1.20.2",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  }
 }
